--- a/desafio/desafio 11/desafio11.css
+++ b/desafio/desafio 11/desafio11.css
@@ -96,7 +96,7 @@ div.normal{
 
     background-size: cover;
     background-attachment: fixed;
-    background-position: right top;
+    background-position: right center;
     position: relative
 
 }
