--- a/Pratica/estilo.css
+++ b/Pratica/estilo.css
@@ -124,6 +124,11 @@ div.terno{
     display: block;
     margin: auto;
 
+    max-height: 1100px;
+    min-height: 600px;
+    max-width: 800px;
+    min-width: 300px;
+
 }
 div.colete{
 
