--- a/Pratica/estilo.css
+++ b/Pratica/estilo.css
@@ -21,11 +21,6 @@
     margin: 0px;
 }
 
-.letras{
-
-    padding: 0px 0px 40px 0px;
-
-}
 header h1{
     
     margin-top: 40px;
@@ -38,22 +33,10 @@ header h1{
     text-align: center;
 
 }
-#cabecalho{
+header div#cabecalho{
 
     background-color: #cabfaba2;
     margin: 0px;
-    text-indent: -2px;
-
-}
-#cadastro{
-    
-    margin: 0px;
-    margin-right: 15px;
-    padding-top: 20px;
-    padding-right: 5px;
-    float: right;
-    text-align: center;
-    min-width: 406px;
 
 }
 header a{
@@ -73,6 +56,12 @@ header a{
     font-style: bold;
     font-size: 16px;
     
+
+}
+header a:last-child{
+
+    float: right;
+    margin: 20px 0px 0px 0px;
 
 }
 
