--- a/Pratica/estilo.css
+++ b/Pratica/estilo.css
@@ -16,11 +16,31 @@
     src: url("fonte/MD\ Grotesk\ Regular.ttf");
 }
 
+/* Configuração Geral */
+
 *{
     padding: 0px;
     margin: 0px;
 }
+body{
 
+    background-color: rgb(243, 243, 243);
+
+}
+hr{
+
+    margin: 0px;
+
+}
+
+/* Configurando o Header e a Logo */
+
+div#cabecalho{
+
+    background-color: #cabfaba2;
+    margin: 0px;
+
+}
 header h1{
     
     margin: 0px;
@@ -33,12 +53,6 @@ header h1{
     font-size: 4em;
     font-family: 'Logo';
     text-align: center;
-
-}
-header div#cabecalho{
-
-    background-color: #cabfaba2;
-    margin: 0px;
 
 }
 header a{
@@ -69,22 +83,111 @@ header a:last-child{
 
 }
 
+/* Configurando as Templates das roupas */
 
-div.texto{
+p.terno{
 
-    margin: 80px;
+    background-image: url('fotos/02f53bda666ee9dcdc3696c79838cb95.jpg');
+    height: 100vh;
+    width: 100vw;
+
+    background-size: 100% 100%;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    display: block;
+    margin: auto;
+
+
+}
+div.colete{
+
+    background-image: url('fotos/ColeteAzul.jfif');
+    height: 100vh;
+
+    background-size: 100% 100%;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    display: block;
+    margin: auto;
+    position: relative;
+
+}
+div.colete img{
+
+    padding: 100px 0px 100px 0px;
+    position: absolute;
+
+    height: 380px;
+    width: 380px;
+    min-width: 200px;
+    min-height: 200px;
+
+    left: 60%;
+    top: 50%;
+
+    transform: translate(-60%, -60%);
+
+}
+/*        Section de Mensagem Comum           */
+section a{
+
+    text-decoration: none;
+    color: black;
+
+}
+section#secao{
+
+    background-color: black;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    color: white;
+
+    
+    font-size: 0.8em;
+    font-weight: lighter;
+    font-style: italic;
     text-align: center;
 
 }
+section#secaoL{
+
+    background-color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    color: black;
+
+    
+    font-size: 0.8em;
+    font-weight: lighter;
+    font-style: italic;
+    text-align: center;
+
+}
+
+
+
+
+/*         Mensagem comum de "Compre Aqui"            */
+
+div.texto{
+    text-align: center;
+}
 div.texto a{
+
+    display: inline-block;
 
     border-radius: 2px;
     border-width: 1px;
     border-style: solid;
     border-color: black;
+    
     padding: 20px;
-    display: inline-block;
-    margin: 20px;
+    margin: 20px 0px 60px 0px ;
+    font-style: italic;
 
     text-decoration: none;
     color: black;
@@ -99,52 +202,57 @@ div.texto a:hover{
     border-color: black;
     display: inline-block;
     
-    margin: 10px;
-    padding: 25px;
-    transition: .5s;
+
+}
+h1.letras{
+
+    font-size: 4em;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    font-family: 'Logo';
+    text-align: center;
+
+}
+h2.letras{
+
+    font-size: 1.2em;
+    font-style:italic;
+    font-weight: lighter;
+    margin-top: 40px;
+    margin-bottom: 20px;
 
 }
 
+/* Configurando o footer e informaçoes adicionais */
 
-p.terno{
-
-    background-image: url('fotos/02f53bda666ee9dcdc3696c79838cb95.jpg');
-
-    background-size: 100% 100%;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-    display: block;
-    margin: auto;
-
+ul#info{
+    
+    background-color: #CABFAB;
+    columns: 2;
+    padding: 20px 20px 0px 20px;
 
 }
-p.colete{
+ul#info a{
 
-    background-image: url('fotos/ColeteAzul.jfif');
-    size: 100vh;
-
-    background-size: 100% 100%;
-    background-size: cover;
-    background-attachment: fixed;
-    background-position: center center;
-    display: block;
-    margin: auto;
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.733);
 
 }
+ul#info h3{
 
+    margin-bottom: 20px;
 
-body{
-
-    background-color: #DFD8C8;
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
 
 }
-
 
 footer{
     
     text-align: center;
-    background-color: #CABFAB;
+    background-color: black;
+    color: white;
 
 }
 
