--- a/Pratica/produtos.css
+++ b/Pratica/produtos.css
@@ -10,7 +10,7 @@ body{
 
 /*    Configurando o cabeçalho    */
 
-div#cabecalho{
+nav#cabecalho{
 
     background-color: black;
     margin: 0px;
@@ -57,7 +57,6 @@ header a:last-child{
 
 
 }
-
 /* Configuração de section simples */
 
 section a{
@@ -98,107 +97,65 @@ section#secaoL{
 }
 
 /* Criando os Displays dos Produtos */
-div#Produto{
+section img{
+    width: 80%;
+}
 
+section#Produtos{
+
+    display: flex;
+    flex-wrap: wrap;
+
+    justify-content: center;
     text-align: center;
-
 }
-div p.Produto1{
+section#Produtos a{
 
-    margin: 5px;
-    padding: 20px;
-    background-color: grey;
-
-    height: 250px;
-    width: 220px;
-
-    border-radius: 5px;
-    border-width: 2px;
+    border-radius: 2px;
+    border-width: 1px;
     border-style: solid;
     border-color: black;
-
-    display: inline-block;
-
-    background-image: url("fotos/ColeteAzul.jfif");
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    background-position: center center;
     
+    padding: 10px;
+
+    font-style: bolder;
+
+    text-decoration: none;
+    color: black;
+
 }
-div p.Produto2{
 
-    margin: 5px;
-    padding: 20px;
-    background-color: grey;
+section.Produto p{
 
-    height: 250px;
-    width: 220px;
+    margin-bottom: 15px;
+    padding-bottom: 10px;
+    font-style: italic;
+    font-weight: bolder;
+
+}
+
+section.Produto{
+    
+    margin: 15px 25px 15px 25px;
+    width: 30%;
 
     border-radius: 5px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-
-    display: inline-block;
-
-    background-image: url("fotos/02f53bda666ee9dcdc3696c79838cb95.jpg");
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    background-position: right center;
-
+    box-shadow: 1px 1px 1px 0.8px rgba(0, 0, 0, 0.308);
+  
 }
-div p.Produto3{
+section.Produto{
 
-    margin: 5px;
-    padding: 20px;
-    background-color: grey;
+    margin: 15px 25px 15px 25px;
+    padding: 10px;
+    width: 30%;
 
-    height: 250px;
-    width: 220px;
-
+    border: 1px solid rgba(0, 0, 0, 0.219);
     border-radius: 5px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-
-    display: inline-block;
-
-    background-image: url("fotos/logo.png");
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    background-position: center center;
-
+    box-shadow: 1px 1px 1px 0.8px rgba(0, 0, 0, 0.308);
+  
 }
-div p.Produto4{
 
-    margin: 5px;
-    padding: 20px;
-    background-color: grey;
 
-    height: 250px;
-    width: 220px;
-
-    border-radius: 5px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: black;
-
-    display: inline-block;
-
-    background-image: url("fotos/R.png");
-
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-    background-position: center center;
-
-}
 
 
 
