--- a/Pratica/produtos.css
+++ b/Pratica/produtos.css
@@ -111,12 +111,12 @@ section#Produtos{
 }
 section#Produtos a{
 
-    border-radius: 2px;
+    border-radius: 10px;
     border-width: 1px;
     border-style: solid;
     border-color: black;
     
-    padding: 10px;
+    padding: 10px 2px 10px 2px;
 
     font-style: bolder;
 
