--- a/Pratica/contato.css
+++ b/Pratica/contato.css
@@ -64,3 +64,46 @@ header a:last-child{
 
 
 }
+
+
+
+/* Configurando o footer e informaçoes adicionais */
+ul#info{
+    
+    background-color: #CABFAB;
+    columns: 2;
+    padding: 20px 20px 20px 20px;
+
+}
+ul#info a{
+
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.733);
+
+}
+ul#info h3{
+
+    margin-bottom: 20px;
+
+    font-size: 0.8em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+
+}
+
+footer{
+    
+    text-align: center;
+    background-color: black;
+    color: white;
+    margin: 0px;
+
+}
+footer a{
+
+    font-style: bold;
+    text-decoration: underline;
+    color: white;
+    margin: 0px;
+
+}
