--- a/Pratica/contato.css
+++ b/Pratica/contato.css
@@ -65,7 +65,43 @@ header a:last-child{
 
 }
 
+/*        Section de Mensagem Comum           */
+section a{
 
+    text-decoration: none;
+    color: black;
+
+}
+section#secao{
+
+    background-color: rgba(0, 0, 0, 0.808);
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    color: white;
+
+    
+    font-size: 0.8em;
+    font-weight: lighter;
+    font-style: italic;
+    text-align: center;
+
+}
+section#secaoL{
+
+    background-color: white;
+    padding-top: 25px;
+    padding-bottom: 25px;
+
+    color: black;
+
+    
+    font-size: 0.8em;
+    font-weight: lighter;
+    font-style: italic;
+    text-align: center;
+
+}
 
 /* Configurando o footer e informaçoes adicionais */
 ul#info{
@@ -97,6 +133,7 @@ footer{
     background-color: black;
     color: white;
     margin: 0px;
+    bottom: 0;
 
 }
 footer a{
