--- a/Pratica/contato.css
+++ b/Pratica/contato.css
@@ -103,7 +103,7 @@ section#secaoL{
 
 }
 
-/* Configurando o footer e informaçoes adicionais */
+/*     Configurando informações adicionais e o Footer      */
 ul#info{
     
     background-color: #CABFAB;
