--- a/Pratica/cadastro.css
+++ b/Pratica/cadastro.css
@@ -70,7 +70,7 @@ header a:last-child{
 
 form.cadastro{
 
-    padding: 20px;
+    padding: 20px 20px 50px 20px;
     text-align: center;
 
 }
@@ -112,7 +112,7 @@ div#divisao h1{
     
     text-align: center;
 
-    padding: 20px;
+    padding: 20px 20px 46px 20px;
 
 }
 
